主頁介面調整完畢 揪團頁面調整中(再看看怎麼改比較好)

--- a/app/src/main/res/layout/activity_informationedit.xml
+++ b/app/src/main/res/layout/activity_informationedit.xml
@@ -112,7 +112,7 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="80dp"
         android:layout_marginRight="80dp"
-        android:background="@drawable/loginBtnBck"
+        android:background="@drawable/loginbtnbck"
         android:text="@string/register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/loginPage"
