--- a/app/src/main/res/layout/content_chatting.xml
+++ b/app/src/main/res/layout/content_chatting.xml
@@ -172,10 +172,8 @@
         android:layout_height="63dp"
         android:orientation="horizontal"
         android:padding="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/include"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout10">
 
         <EditText
             android:id="@+id/editText5"
@@ -192,18 +190,5 @@
             android:layout_weight="1"
             android:background="@drawable/ic_menu_send" />
     </LinearLayout>
-
-    <include
-        android:id="@+id/include"
-        layout="@layout/bottom_bar"
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_gravity="bottom"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment"
-        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
