--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -38,14 +38,14 @@
         android:layout_alignParentLeft="true">
 
 
-        <ImageButton
-            android:id="@+id/send_files_btn"
-            android:layout_width="60dp"
-            android:layout_height="50dp"
-            android:src="@drawable/ic_menu_send"
-            android:layout_alignParentStart="true"
-            android:backgroundTint="@android:color/white"
-            android:layout_alignParentLeft="true" />
+<!--        <ImageButton-->
+<!--            android:id="@+id/send_files_btn"-->
+<!--            android:layout_width="60dp"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:src="@drawable/ic_menu_send"-->
+<!--            android:layout_alignParentStart="true"-->
+<!--            android:backgroundTint="@android:color/white"-->
+<!--            android:layout_alignParentLeft="true" />-->
 
 
         <EditText
