--- a/app/src/main/res/layout/activity_forgetpwd.xml
+++ b/app/src/main/res/layout/activity_forgetpwd.xml
@@ -6,86 +6,89 @@
     android:layout_height="match_parent"
     android:background="@color/quantum_grey300">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="235dp"
-        android:layout_height="217dp"
-        android:layout_gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.077"
-        app:srcCompat="@drawable/head" />
-
-    <TextView
-        android:id="@+id/textView_account"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/email"
-        android:textSize="25dp"
-        android:layout_gravity="center"
-
-        app:layout_constraintBottom_toTopOf="@+id/editText_account"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.268"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.717" />
-
 
     <EditText
         android:id="@+id/editText_account"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
+        android:layout_width="240dp"
+        android:layout_height="53dp"
         android:layout_gravity="center"
+        android:background="@drawable/shape_textview"
 
+        android:ems="10"
+        android:hint="信箱"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button_send"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="241dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
-        android:background="@color/colorButton"
+        android:background="@drawable/shape_textviewlogin"
         android:text="@string/send"
-        android:textColor="#ffffff"
+
+        android:textColor="#000000"
         android:textSize="25dp"
-
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.693"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/guideline"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="@id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/editText_account"
-        app:layout_constraintVertical_bias="0.162" />
-
+        app:layout_constraintVertical_bias="0.145" />
 
     <Button
         android:id="@+id/btn_back_to_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#FFFFFF"
+        android:layout_width="119dp"
+        android:layout_height="44dp"
+        android:background="@drawable/shape_edittext"
         android:stateListAnimator="@null"
         android:text="@string/back_to_login"
-        android:textColor="@color/colorButton"
-        android:textSize="15dp"
 
+        android:textColor="@color/colorButton"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.306"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/guideline"
+        app:layout_constraintStart_toStartOf="@id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/editText_account"
-        app:layout_constraintVertical_bias="0.162" />
+        app:layout_constraintVertical_bias="0.511"
+        tools:layout_constraintEnd_toEndOf="@id/guideline" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="206dp" />
+        app:layout_constraintGuide_end="206dp"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="忘記密碼?"
+        android:textColor="#716D6D"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toTopOf="@id/content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.705" />
+
+    <TextView
+        android:id="@+id/content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="輸入您的信箱並登入\n即可取得密碼"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@id/editText_account"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.674" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
