--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -31,14 +31,14 @@
         android:layout_height="wrap_content"
         android:background="@drawable/shape_textview"
         android:ems="10"
-        android:hint="驗證碼"
+        android:hint="確認密碼"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@id/button_verify"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/registerPage"
-        app:layout_constraintVertical_bias="0.886" />
+        app:layout_constraintVertical_bias="0.611" />
 
     <EditText
         android:id="@+id/editText_email"
@@ -72,34 +72,21 @@
         app:layout_constraintVertical_bias="0.765" />
 
     <Button
-        android:id="@+id/button_verify"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="發送驗證碼"
-        android:textColor="#000"
-        android:textSize="20dp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.838" />
-
-    <Button
         android:id="@+id/btn_back_to_login"
         android:layout_width="270dp"
         android:layout_height="58dp"
         android:background="@drawable/shape_textviewlogin"
         android:stateListAnimator="@null"
-        android:text="@string/register"
 
+        android:text="@string/register"
         android:textColor="#000"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button_verify"
-        app:layout_constraintVertical_bias="0.408" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.928" />
 
     <Button
         android:id="@+id/loginPage"
