--- a/app/src/main/res/layout/content_verify.xml
+++ b/app/src/main/res/layout/content_verify.xml
@@ -23,48 +23,60 @@
         android:id="@+id/linearLayout8"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#e0e0e0"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/activityTitle"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10sp"
-            android:layout_marginBottom="5sp"
-            android:shadowColor="#000000"
-            android:text="活動1"
-            android:textColor="#000000"
-            android:textSize="18sp" />
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
+
+            <TextView
+                android:id="@+id/activityTitle"
+                android:layout_width="96dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10sp"
+                android:layout_marginTop="10sp"
+                android:layout_marginBottom="5sp"
+                android:shadowColor="#000000"
+                android:text="活動1"
+                android:textColor="#000000"
+                android:textSize="24sp" />
+        </LinearLayout>
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="511dp"
+            android:layout_height="624dp"
             android:padding="5sp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="5sp"
-                    android:background="#FFEB3B"
+                    android:layout_width="340dp"
+                    android:layout_height="272dp"
+                    android:layout_marginBottom="10sp"
+                    android:background="@drawable/shape_textview"
+                    android:gravity="center_horizontal"
                     android:orientation="vertical"
                     android:padding="5sp">
 
                     <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="335dp"
+                        android:layout_height="257dp"
                         android:background="#FFFFFF"
                         android:orientation="vertical">
 
                         <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_width="303dp"
+                            android:layout_height="53dp"
                             android:layout_margin="10dp"
                             android:orientation="horizontal"
                             android:paddingLeft="60dp"
@@ -72,7 +84,7 @@
 
                             <Button
                                 android:id="@+id/button24"
-                                android:layout_width="36dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="50dp"
                                 android:layout_weight="1"
                                 android:background="@drawable/photo" />
@@ -84,18 +96,19 @@
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal"
                                 android:text="useraccount"
-                                android:textColor="#3F51B5" />
+                                android:textColor="#3F51B5"
+                                android:textSize="22sp" />
 
                         </LinearLayout>
 
                         <TextView
                             android:id="@+id/userName"
-                            android:layout_width="match_parent"
+                            android:layout_width="215dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="20dp"
-                            android:layout_marginTop="10dp"
                             android:text="姓名：王小明"
-                            android:textColor="#000000" />
+                            android:textColor="#000000"
+                            android:textSize="18sp" />
 
                         <TextView
                             android:id="@+id/userSex"
@@ -104,7 +117,8 @@
                             android:layout_marginLeft="20dp"
                             android:layout_marginTop="10dp"
                             android:text="性別：男"
-                            android:textColor="#000000" />
+                            android:textColor="#000000"
+                            android:textSize="18sp" />
 
                         <TextView
                             android:id="@+id/userAge"
@@ -113,7 +127,8 @@
                             android:layout_marginLeft="20dp"
                             android:layout_marginTop="10dp"
                             android:text="年齡：20"
-                            android:textColor="#000000" />
+                            android:textColor="#000000"
+                            android:textSize="18sp" />
 
                         <TextView
                             android:id="@+id/userPhone"
@@ -123,11 +138,12 @@
                             android:layout_marginTop="10dp"
                             android:layout_marginBottom="10dp"
                             android:text="手機：0987777899"
-                            android:textColor="#000000" />
+                            android:textColor="#000000"
+                            android:textSize="18sp" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="59dp"
                             android:orientation="horizontal">
 
                             <Button
@@ -136,28 +152,31 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="2dp"
                                 android:layout_weight="1"
-                                android:background="#FF9C9999"
-                                android:text="批准"
-                                android:textColor="#FFFFFF" />
+                                android:background="@drawable/shape_verifybtn"
+                                android:text="V批准"
+                                android:textColor="#FFFFFF"
+                                android:textSize="20sp" />
 
                             <Button
                                 android:id="@+id/reject"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:background="#9C9999"
-                                android:text="拒絕"
-                                android:textColor="#ffffff" />
+                                android:background="@drawable/shape_verifybtn"
+                                android:text="X拒絕"
+                                android:textColor="#ffffff"
+                                android:textSize="20sp" />
 
                         </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="339dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5sp"
-                    android:background="#FFEB3B"
+                    android:background="@drawable/shape_textview"
+                    android:gravity="center_horizontal"
                     android:orientation="vertical"
                     android:padding="5sp">
 
@@ -177,7 +196,7 @@
 
                             <Button
                                 android:id="@+id/button33"
-                                android:layout_width="36dp"
+                                android:layout_width="88dp"
                                 android:layout_height="50dp"
                                 android:layout_weight="1"
                                 android:background="@drawable/photo" />
@@ -189,7 +208,8 @@
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal"
                                 android:text="useraccount"
-                                android:textColor="#3F51B5" />
+                                android:textColor="#3F51B5"
+                                android:textSize="22sp" />
 
                         </LinearLayout>
 
@@ -198,9 +218,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="20dp"
-                            android:layout_marginTop="10dp"
                             android:text="姓名：王小明"
-                            android:textColor="#000000" />
+                            android:textColor="#000000"
+                            android:textSize="18sp" />
 
                         <TextView
                             android:id="@+id/textView73"
@@ -209,7 +229,8 @@
                             android:layout_marginLeft="20dp"
                             android:layout_marginTop="10dp"
                             android:text="性別：男"
-                            android:textColor="#000000" />
+                            android:textColor="#000000"
+                            android:textSize="18sp" />
 
                         <TextView
                             android:id="@+id/textView74"
@@ -218,7 +239,8 @@
                             android:layout_marginLeft="20dp"
                             android:layout_marginTop="10dp"
                             android:text="年齡：20"
-                            android:textColor="#000000" />
+                            android:textColor="#000000"
+                            android:textSize="18sp" />
 
                         <TextView
                             android:id="@+id/textView75"
@@ -228,7 +250,8 @@
                             android:layout_marginTop="10dp"
                             android:layout_marginBottom="10dp"
                             android:text="手機：0987777899"
-                            android:textColor="#000000" />
+                            android:textColor="#000000"
+                            android:textSize="18sp" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -241,18 +264,20 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="2dp"
                                 android:layout_weight="1"
-                                android:background="#FF9C9999"
-                                android:text="批准"
-                                android:textColor="#FFFFFF" />
+                                android:background="@drawable/shape_verifybtn"
+                                android:text="V批准"
+                                android:textColor="#FFFFFF"
+                                android:textSize="20sp" />
 
                             <Button
                                 android:id="@+id/rejection"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:background="#9C9999"
-                                android:text="拒絕"
-                                android:textColor="#ffffff" />
+                                android:background="@drawable/shape_verifybtn"
+                                android:text="X拒絕"
+                                android:textColor="#ffffff"
+                                android:textSize="20sp" />
 
                         </LinearLayout>
                     </LinearLayout>
@@ -261,15 +286,15 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="5sp"
-                    android:background="#FFEB3B"
+                    android:layout_marginBottom="10sp"
+                    android:gravity="center_horizontal"
                     android:orientation="vertical"
                     android:padding="5sp">
 
                     <LinearLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="341dp"
                         android:layout_height="match_parent"
-                        android:background="#FFFFFF"
+                        android:background="@drawable/shape_textview"
                         android:orientation="vertical">
 
                         <LinearLayout
@@ -282,7 +307,7 @@
 
                             <Button
                                 android:id="@+id/button17"
-                                android:layout_width="36dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="50dp"
                                 android:layout_weight="1"
                                 android:background="@drawable/photo" />
@@ -294,45 +319,49 @@
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal"
                                 android:text="useraccount"
-                                android:textColor="#3F51B5" />
+                                android:textColor="#3F51B5"
+                                android:textSize="22sp" />
                         </LinearLayout>
 
                         <TextView
                             android:id="@+id/textView39"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginLeft="10dp"
                             android:text="姓名：王小明"
-                            android:textColor="#000000" />
+                            android:textColor="#000000"
+                            android:textSize="18sp" />
 
                         <TextView
                             android:id="@+id/textView55"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
+                            android:layout_marginLeft="10dp"
                             android:layout_marginTop="10dp"
                             android:text="性別：男"
-                            android:textColor="#000000" />
+                            android:textColor="#000000"
+                            android:textSize="18sp" />
 
                         <TextView
                             android:id="@+id/textView56"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
+                            android:layout_marginLeft="10dp"
                             android:layout_marginTop="10dp"
                             android:text="年齡：20"
-                            android:textColor="#000000" />
+                            android:textColor="#000000"
+                            android:textSize="18sp" />
 
                         <TextView
                             android:id="@+id/textView57"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
+                            android:layout_marginLeft="10dp"
                             android:layout_marginTop="10dp"
                             android:layout_marginBottom="10dp"
                             android:text="手機：0987777899"
-                            android:textColor="#000000" />
+                            android:textColor="#000000"
+                            android:textSize="18sp" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -345,18 +374,20 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="2dp"
                                 android:layout_weight="1"
-                                android:background="#FF9C9999"
-                                android:text="批准"
-                                android:textColor="#FFFFFF" />
+                                android:background="@drawable/shape_verifybtn"
+                                android:text="V批准"
+                                android:textColor="#FFFFFF"
+                                android:textSize="20sp" />
 
                             <Button
                                 android:id="@+id/button23"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:background="#9C9999"
-                                android:text="拒絕"
-                                android:textColor="#ffffff" />
+                                android:background="@drawable/shape_verifybtn"
+                                android:text="X拒絕"
+                                android:textColor="#ffffff"
+                                android:textSize="20sp" />
                         </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
