--- a/app/src/main/res/layout/content_noticeupdate.xml
+++ b/app/src/main/res/layout/content_noticeupdate.xml
@@ -37,6 +37,7 @@
         android:layout_width="411dp"
         android:layout_height="678dp"
         android:layout_marginTop="55dp"
+        android:background="#e0e0e0"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,6 +55,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="#e0e0e0"
             android:padding="5sp">
 
             <LinearLayout
@@ -63,9 +65,10 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycleview"
-                    android:layout_width="match_parent"
+                    android:layout_width="385dp"
                     android:layout_height="657dp"
-                    android:layout_marginLeft="10dp" />
+                    android:layout_marginLeft="10dp"
+                    android:background="#e0e0e0" />
 
             </LinearLayout>
         </ScrollView>
