--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -22,7 +22,7 @@
             android:id="@+id/activityy"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#E0E0E0"
+            android:background="#ffffff"
             android:clickable="true"
             android:orientation="horizontal"
             android:padding="10sp">
