--- a/app/src/main/res/layout/app_bar_layout.xml
+++ b/app/src/main/res/layout/app_bar_layout.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_app_bar"
-    android:background="@color/colorMain"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-</androidx.appcompat.widget.Toolbar>
+    android:background="@color/colorMain"
+    android:layout_gravity="center_horizontal"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    app:title="JOINME"
+    app:titleTextAppearance="@style/TextAppearance.AppCompat.Display3"
+    app:titleTextColor="#000000"></androidx.appcompat.widget.Toolbar>
