--- a/app/src/main/res/layout/verify_layout.xml
+++ b/app/src/main/res/layout/verify_layout.xml
@@ -33,15 +33,16 @@
                 android:layout_height="50dp"
                 android:src="@drawable/head" />
 
-<!--            <TextView-->
-<!--                android:id="@+id/useraccount"-->
-<!--                android:layout_width="175dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_weight="1"-->
-<!--                android:gravity="center_horizontal"-->
-<!--                android:text="useraccount"-->
-<!--                android:textColor="#3F51B5"-->
-<!--                android:textSize="22sp" />-->
+            <TextView
+                android:id="@+id/activityname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="陽明山之旅"
+                android:textColor="#000000"
+                android:textSize="18sp" />
 
         </LinearLayout>
 
@@ -84,6 +85,8 @@
             android:text="手機：0987777899"
             android:textColor="#000000"
             android:textSize="18sp" />
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
