--- a/app/src/main/res/layout/activity_evaluate.xml
+++ b/app/src/main/res/layout/activity_evaluate.xml
@@ -33,12 +33,12 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:text="好友邀請"
+            android:text="排球!!"
             android:textSize="36sp" />
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="550dp"
             android:padding="5sp">
 
             <LinearLayout
@@ -49,11 +49,27 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rrecycleview"
                     android:layout_width="match_parent"
-                    android:layout_height="657dp"
-                    android:layout_marginLeft="10dp" />
+                    android:layout_height="540dp"
+                    android:layout_marginLeft="10dp" >
+
+                </androidx.recyclerview.widget.RecyclerView>
 
             </LinearLayout>
         </ScrollView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:background="@color/colorMain"
+                android:textSize="25dp"
+                android:text="一鍵評價" />
+        </LinearLayout>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
