--- a/app/src/main/res/layout/evaluate_layout.xml
+++ b/app/src/main/res/layout/evaluate_layout.xml
@@ -49,31 +49,31 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_weight="1"
-                    android:background="@drawable/collection" />
+                    android:background="@drawable/star" />
                 <Button
                     android:id="@+id/two"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_weight="1"
-                    android:background="@drawable/collection" />
+                    android:background="@drawable/star" />
                 <Button
                     android:id="@+id/three"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_weight="1"
-                    android:background="@drawable/collection" />
+                    android:background="@drawable/star" />
                 <Button
                     android:id="@+id/four"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_weight="1"
-                    android:background="@drawable/collection" />
+                    android:background="@drawable/star" />
                 <Button
                     android:id="@+id/five"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_weight="1"
-                    android:background="@drawable/collection" />
+                    android:background="@drawable/star" />
 
 
             </LinearLayout>
