活動時間結束後不顯示 && 寄通知給參加者前往評價

--- a/app/src/main/res/layout/activity_evaluate.xml
+++ b/app/src/main/res/layout/activity_evaluate.xml
@@ -63,7 +63,7 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/btn_evaluate"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:background="@color/colorMain"
