--- a/app/src/main/res/layout/app_bar_layout.xml
+++ b/app/src/main/res/layout/app_bar_layout.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     android:background="@color/colorMain"
     android:layout_gravity="center_horizontal"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    app:title="JOINME"
-    app:titleTextColor="#000000"></androidx.appcompat.widget.Toolbar>
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="JOINME"
+        android:textColor="#000000"
+        android:textSize="40dp"
+        android:layout_gravity="center"/>
+
+</androidx.appcompat.widget.Toolbar>
