--- a/app/src/main/res/layout/content_createact.xml
+++ b/app/src/main/res/layout/content_createact.xml
@@ -68,8 +68,7 @@
                     android:layout_marginTop="10sp"
                     android:background="@drawable/shape_textview"
                     android:orientation="horizontal"
-                    android:paddingRight="10sp"
-                    android:paddingBottom="10sp">
+                    android:paddingRight="10sp">
 
                     <TextView
                         android:id="@+id/textView30"
